--- a/example/WORKSPACE.bazel
+++ b/example/WORKSPACE.bazel
@@ -306,6 +306,10 @@ load("@aspect_rules_lint//lint:checkstyle.bzl", "fetch_checkstyle")
 
 fetch_checkstyle()
 
+load("@aspect_rules_lint//lint:spotbugs.bzl", "fetch_spotbugs")
+
+fetch_spotbugs()
+
 load("@aspect_rules_lint//lint:pmd.bzl", "fetch_pmd")
 
 fetch_pmd()
