--- a/example/.bazelrc
+++ b/example/.bazelrc
@@ -20,3 +20,6 @@ common:windows --action_env=BAZEL_CXXOPTS="/std:c++20"
 common --action_env=INCLUDE
 # ensure that minimal other envvars are passed by clang-tidy run_shell
 common --incompatible_strict_action_env
+
+common --java_language_version=17
+common --java_runtime_version=remotejdk_17
