--- a/example/WORKSPACE.bazel
+++ b/example/WORKSPACE.bazel
@@ -245,6 +245,7 @@ load("@rules_jvm_external//:defs.bzl", "maven_install")
 maven_install(
     artifacts = [
         "org.scalameta:scalafmt-cli_2.13:3.7.14",
+        "com.github.spotbugs:spotbugs:4.8.6",
     ],
     maven_install_json = "//:maven_install.json",
     repositories = [
