--- a/example/MODULE.bazel
+++ b/example/MODULE.bazel
@@ -84,8 +84,11 @@ use_repo(go_sdk, "go_sdk")
 # https://github.com/bazelbuild/rules_jvm_external#pinning-artifacts-and-integration-with-bazels-downloader
 maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
 maven.install(
+    name = "maven",
     artifacts = [
         "org.scalameta:scalafmt-cli_2.13:3.7.14",
+        "com.github.spotbugs:spotbugs:4.7.0",
+        "org.slf4j:slf4j-jdk14:1.7.32",
     ],
     lock_file = "//:maven_install.json",
     repositories = [
