--- a/example/tools/lint/BUILD.bazel
+++ b/example/tools/lint/BUILD.bazel
@@ -45,7 +45,10 @@ java_binary(
 java_binary(
     name = "spotbugs",
     main_class = "edu.umd.cs.findbugs.LaunchAppropriateUI",
-    runtime_deps = ["@com_github_spotbugs_spotbugs"],
+    runtime_deps = [
+        "@maven//:com_github_spotbugs_spotbugs",
+        "@maven//:org_slf4j_slf4j_jdk14",
+    ],
 )
 
 native_binary(
